# 5gs-rs

./: .gitignore  Cargo.toml  LICENSE
crates/nrf/: Cargo.toml
