[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Alistair Gareth Mayo <agm@agm.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/rs-5gs/rs-5gs"
homepage = "rs-5gs.agm.dev"

[workspace.dependencies]
serde = "1.0.228"
tokio = { version = "1.49.0", features = ["full"] }
